--- a/Files/Pananaliksik.html
+++ b/Files/Pananaliksik.html
@@ -10,7 +10,7 @@
     <body>
         <nav id="top">
             <a 
-                href="../Syan_Deyvid.html" target="_self">Home
+                href="../index.html" target="_self">Home
             </a> &nbsp;|
 
             <a 
