--- a/Files/shawn-html.html
+++ b/Files/shawn-html.html
@@ -67,7 +67,7 @@
 <body>
 	<nav id="top">
 		<a 
-			href="../Syan_Deyvid.html" target="_self">Home
+			href="../index.html" target="_self">Home
 		</a>
 	</nav>
     <header>
