--- a/Files/Pananaliksik.html
+++ b/Files/Pananaliksik.html
@@ -2,7 +2,7 @@
 <html> 
     <head>
         <title>  Pananaliksik  </title>
-        <link rel="stylesheet" href="Pananaliksik.css"/>
+        <link rel="stylesheet" href="pananaliksik.css"/>
         <link rel="icon" href="FCPC.png"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
