--- a/Files/shawn-html.html
+++ b/Files/shawn-html.html
@@ -32,6 +32,13 @@
             z-index: 1;
             text-align: center;
         }
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 0;
+        }
         h3 {
             color: #3498db;
         }
@@ -65,17 +72,16 @@
     </style>
 </head>
 <body>
-	<nav id="top">
-		<a 
-			href="../index.html" target="_self">Home
-		</a>
-	</nav>
+    <div class="overlay"></div> <!-- Add this overlay div -->
+    <nav id="top">
+        <a href="../Syan_Deyvid.html" target="_self">Home</a>
+    </nav>
     <header>
         <h1>Shawn David S. Domingo's</h1>
         <h2>The Journey to the Troubled World</h2>
     </header>
     <main>
-		<h2>Book 1: Lucid Dreams</h2>
+        <h2>Book 1: Lucid Dreams</h2>
         <section>
             <h3>Chapter 1: <i>"Grief"</i></h3>
             <h4>The Poem</h4>
@@ -86,14 +92,14 @@
                 All the pain<br>
             </p>
         </section>
-		<section>
+        <section>
             <h3>Chapter 2: <i>"Psycho"</i></h3>  
             <h4>Migraine</h4>
             <p>
                 I don't care what you think of me<br>
-				I just want to be on top<br>
-				I'm not stressed that you've never heard of me<br>
-				You'll be listening non-stop<br>
+                I just want to be on top<br>
+                I'm not stressed that you've never heard of me<br>
+                You'll be listening non-stop<br>
             </p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4YLKHaxYieIw6iMVfIvKm7?utm_source=generator&theme=0"  width="400px" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </section>
