--- a/Files/shawn-html.html
+++ b/Files/shawn-html.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="boywithuke1.jpg"/>
     <style>
         body {
-            font-family: Cambria, sans-serif;
+            font-family: Cambria;
             margin: 0;
             padding: 0;
             background-image: url('boywithuke.jpg');
