--- a/Files/shawn-html.html
+++ b/Files/shawn-html.html
@@ -72,7 +72,7 @@
     </style>
 </head>
 <body>
-    <div class="overlay"></div> <!-- Add this overlay div -->
+    <div class="overlay"></div>
     <nav id="top">
         <a href="../Syan_Deyvid.html" target="_self">Home</a>
     </nav>
