--- a/Files/shawn-html.html
+++ b/Files/shawn-html.html
@@ -74,7 +74,7 @@
 <body>
     <div class="overlay"></div>
     <nav id="top">
-        <a href="../index.html" target="_self">Home</a>
+        <a href="../index.html" target="_self">Main</a>
     </nav>
     <header>
         <h1>Shawn David S. Domingo's</h1>
