--- a/Files/shawn-html.html
+++ b/Files/shawn-html.html
@@ -74,13 +74,28 @@
 <body>
     <div class="overlay"></div>
     <nav id="top">
-        <a href="../index.html" target="_self">Main</a>
+        <a href="../Syan_Deyvid.html" target="_self">Home</a>
     </nav>
     <header>
         <h1>Shawn David S. Domingo's</h1>
         <h2>The Journey to the Troubled World</h2>
     </header>
     <main>
+        <h2>Who am I?</h2>
+        <section>
+            <h3><i>"This is me!"</i></h3>
+            <p>
+                Hey there! I'm Shawn David, a Grade 12 First City Providential College student. I'm diving deep into the exciting world of ICT-CSS (Information and Communication Technology—Computer Systems Servicing).
+                <br><br>
+                As an FCPCian, I'm constantly immersed in the dynamic atmosphere of learning and innovation. It's what sparked my interest in computers and everything they can do. From troubleshooting to software development, I'm eager to learn it all and carve out my path in the digital realm.
+                <br><br>
+                When I'm not engrossed in bits and bytes, I often unwind with my favourite tunes or catch up on the latest blockbuster hits. Music and movies are my go-to escapes, offering a welcome break from the complexities of coding and hardware.
+                <br><br>
+                But amidst all the tech and entertainment, nothing beats the simple joys of spending time with my loved ones. Whether it's sharing a meal or hanging out, family and friends are the actual anchors in my life.
+                <br><br>
+                Join me as I navigate the challenges and triumphs of Grade 12 ICT-CSS. Together, let's explore the endless possibilities technology offers and make memories along the way.<br><br>
+            </p>
+        </section>
         <h2>Book 1: Lucid Dreams</h2>
         <section>
             <h3>Chapter 1: <i>"Grief"</i></h3>
