--- a/Files/Charles_resume.html
+++ b/Files/Charles_resume.html
@@ -9,9 +9,9 @@
     <div class="header">
       <img class="profile-pic" src="charles.png" alt="Profile Picture">
       <h1>Charles P. Naluz</h1>
-      <p>Blk 45, Lot 46, Hyacinth St., Harmony Hills 2, Marilao, Bulacan</p>
-      <p>Cellphone no: +639951731011</p>
-      <p>Email add: Charlesnaluz04@gmail.com</p>
+      <p>Marilao, Bulacan</p>
+      <p>Cellphone no: +639123456789</p>
+      <p>Email add: *****@gmail.com</p>
     </div>
     <hr>
     <div class="section">
@@ -37,9 +37,9 @@
         </li>
         <br>
         <li class="text">
-            <strong>Elementary, With Honor</strong><br>
-            Apugan Elementary School <br>
-            Upper Bigte, Norzagaray, Bulacan<br>
+            <strong>Elementary</strong><br>
+            FSS Patulo Elementary School <br>
+            Sitio Patulo, Loma de Gato, Marilao, Bulacan<br>
             2011 – 2017
         </li>
       </ul>
