--- a/Files/Shawn_Resume.html
+++ b/Files/Shawn_Resume.html
@@ -12,9 +12,9 @@
     <div class="header">
       <img class="profile-pic" src="resume.png" alt="Profile Picture">
       <h1>Shawn David S. Domingo</h1>
-      <p>0214 Upper Bigte, Norzagaray, Bulacan</p>
-      <p>Cellphone no: +639666213874</p>
-      <p>Email add: Shawndavidsobremontedomingo@gmail.com</p>
+      <p>Norzagaray, Bulacan</p>
+      <p>Cellphone no: +639123456789</p>
+      <p>Email add: *****@gmail.com</p>
     </div>
     <hr>
     <div class="section">
@@ -95,13 +95,13 @@
             <b>Ms. Celly Tomonong</b> <br>
             Pagsulat sa Filipino sa Piling Larangan teacher<br>
             First City Providential College<br>
-            +639480886887
+            +639123456789
         </li>
         <li class="text"><b>
             Mrs. Joan Santos</b><br>
             Grade 7 teacher<br>
             Minuyan National High School<br>
-            +639955374611
+            +639123456789
         </li>
     </ul>
     </div>
