--- a/Files/shawn-html.html
+++ b/Files/shawn-html.html
@@ -85,9 +85,9 @@
         <section>
             <h3><i>"This is me!"</i></h3>
             <p>
-                Hey there! I'm Shawn David, a Grade 12 First City Providential College student. I'm diving deep into the exciting world of ICT-CSS (Information and Communication Technology—Computer Systems Servicing).
+                Hey there! I'm Shawn David, a Grade 12 First City Providential College student. I'm diving deep into the exciting world of ICT-CSS (Information and Communication Technology — Computer Systems Servicing).
                 <br><br>
-                As an FCPCian, I'm constantly immersed in the dynamic atmosphere of learning and innovation. It's what sparked my interest in computers and everything they can do. From troubleshooting to software development, I'm eager to learn it all and carve out my path in the digital realm.
+                As an Intelligent and Persevering FCPCian, I'm constantly immersed in the dynamic atmosphere of learning and innovation. It's what sparked my interest in computers and everything they can do. From troubleshooting to software development, I'm eager to learn it all and carve out my path in the digital realm.
                 <br><br>
                 When I'm not engrossed in bits and bytes, I often unwind with my favourite tunes or catch up on the latest blockbuster hits. Music and movies are my go-to escapes, offering a welcome break from the complexities of coding and hardware.
                 <br><br>
