--- a/Files/Shawn_Resume.html
+++ b/Files/Shawn_Resume.html
@@ -3,14 +3,14 @@
 <head>
   <title>Shawn David's Resume</title>
   <link rel="stylesheet" type="text/css" href="resume.css">
-  <link rel="icon" href="resume.png"/>
+  <link rel="icon" href="2.png"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="resume">
     <div class="header">
-      <img class="profile-pic" src="resume.png" alt="Profile Picture">
+      <img class="profile-pic" src="2.png" alt="Profile Picture">
       <h1>Shawn David S. Domingo</h1>
       <p>Norzagaray, Bulacan</p>
       <p>Cellphone no: +639123456789</p>
@@ -26,10 +26,10 @@
       <h2>Education</h2>
       <ul>
         <li  class="text">
-            <strong>Computer System Servicing, With High Honor</strong><br>
+            <strong>Computer System Servicing, With Highest Honor</strong><br>
             First City Providential College <br>
             Brgy. Narra, Francisco Homes Subd., City of San Jose del Monte, Bulacan<br>
-            First Semester General Average (Grade 12): 97, 2022 – 2024
+            General Average (Grade 12): 98, 2022 – 2024
         </li>
         <br>
         <li class="text">
@@ -51,8 +51,8 @@
     <div class="section">
       <h2>Achievements and Awards Received</h2>
       <ul class="text">
-        <li>Certificate of Achievement – With Highest Honor – Grade 12 (2nd Quarter, 2023-2024)</li>
-        <li>Certificate of Achievement – With High Honor – Grade 12 (First Quarter, 2023-2024)</li>
+        <li>Computer Systems Servicing National Certificate 2 – TESDA Passer</li>
+        <li>With Highest Honor – Grade 12 (2023-2024)</li>
         <li>With Honor – Grade 11 (2022-2023)</li>
         <li>With Honor – Grade 10 (2021-2022)</li>
         <li>With Honor – Grade 9 (2020-2021)</li>
