--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html> 
     <head>
-        <title>  Syan Deyvid  </title>
+        <title> Syan Deyvid </title>
         <link rel="stylesheet" href="Files/styles.css"/>
         <link rel="icon" href="Files/boywithuke1.jpg"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             body {
                 font-family: Cambria, sans-serif;
                 margin: 0;
                 padding: 0;
                 background-image: url('Files/boywithuke.jpg');
-                background-size: cover; 
+                background-size: cover;
                 background-position: center;
                 background-attachment: fixed;
                 color: #fff;
@@ -19,36 +20,18 @@
     </head>
 
     <body>
-        <h1 style="color:#5280b8;">
-            Hi!<br>
-            I am Shawn David!
-        </h1> 
-        <h3 style="text-align: center;">
-             Nice to meet all of you.
-            <br>
+        <h1>Hi!<br>I am Shawn David!</h1>
+        <h3>
+            Nice to meet all of you.<br>
             I hope we can cooperate well!
         </h3>
-            <br>
-            <br>
-            <nav style="color:white;">
-                <a 
-                    href="Files/shawn-html.html" target="_self">Fun
-                </a>&nbsp;|
-                <a 
-                href="Files/Pananaliksik.html" target="_self">Pananaliksik
-                </a>&nbsp;|
-
-                <a href="Files/Shawn_Resume.html" target="_blank">
-                    Resume
-                </a>
-            </nav>
-            <br>
-       
-            <p> 
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1I4AimunrPco2EPBNEWw7Y?utm_source=generator&theme=0" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </p>
+        <nav>
+            <a href="Files/shawn-html.html" target="_self">Fun</a> |
+            <a href="Files/Pananaliksik.html" target="_self">Pananaliksik</a> |
+            <a href="Files/Shawn_Resume.html" target="_blank">Resume</a>
+        </nav>
         <p>
-            
+            <iframe src="https://open.spotify.com/embed/playlist/1I4AimunrPco2EPBNEWw7Y?utm_source=generator&theme=0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </p>
     </body>
 </html>
