--- a/Files/Shawn_Resume.html
+++ b/Files/Shawn_Resume.html
@@ -78,9 +78,8 @@
     <div class="section">
       <h2>Relevant Skills</h2>
       <ul class="text">
-        <li>Technical Skills</li>
+        <li>Technical Skills on Computers</li>
         <li>Critical Thinking</li>
-        <li>Creativity</li>
         <li>Leadership</li>
         <li>Communication</li>
         <li>Collaboration</li>
