--- a/Files/Shawn_Resume.html
+++ b/Files/Shawn_Resume.html
@@ -53,6 +53,8 @@
       <ul class="text">
         <li>Computer Systems Servicing National Certificate 2 – TESDA Passer</li>
         <li>With Highest Honor – Grade 12 (2023-2024)</li>
+        <li>5th Best Research Presenter in Research Colloquium</li>
+        <li>6th Best Research Paper in Research Colloquium</li>
         <li>With Honor – Grade 11 (2022-2023)</li>
         <li>With Honor – Grade 10 (2021-2022)</li>
         <li>With Honor – Grade 9 (2020-2021)</li>
