--- a/Files/Shawn_Resume.html
+++ b/Files/Shawn_Resume.html
@@ -19,7 +19,7 @@
     <hr>
     <div class="section">
       <h2>Summary</h2>
-      <p class="text">A highly motivated and detail-oriented student with expertise in data analysis, project management, and process improvement. Skilled in troubleshooting complex issues and implementing innovative cost reduction and efficiency improvement strategies. Proficient in leveraging technical skills for data analysis and informed decision-making. Combines analytical thinking with creativity to identify and implement impactful solutions. Excellent communication and collaboration abilities. Committed to continuous growth and contributing to organizational success through dedication and a strong work ethic.</p>
+      <p class="text">A  motivated and detail-oriented student with expertise in data analysis, project management, and process improvement. Skilled in troubleshooting complex issues and implementing innovative cost reduction and efficiency improvement strategies. Proficient in leveraging technical skills for data analysis and informed decision-making. Combines analytical thinking with creativity to identify and implement impactful solutions. Committed to continuous growth and contributing to organizational success through dedication and a strong work ethic.</p>
     </div>
     <hr>
     <div class="section">
@@ -55,25 +55,18 @@
         <li>With Highest Honor – Grade 12 (2023-2024)</li>
         <li>5th Best Research Presenter in Research Colloquium</li>
         <li>6th Best Research Paper in Research Colloquium</li>
-        <li>With Honor – Grade 11 (2022-2023)</li>
-        <li>With Honor – Grade 10 (2021-2022)</li>
-        <li>With Honor – Grade 9 (2020-2021)</li>
-        <li>With Honor – Grade 8 (2019-2020)</li>
+        <li>With Honor – Grade 5 - 11 (2022-2023)</li>
         <li>Champion in Science Quiz Bee – Grade 8</li>
-        <li>With Honor – Grade 7 (2018-2019)</li>
         <li>With Honor – First Honorable Mention – Grade 6 (2017-2018)</li>
         <li>Best in Science Achievement – Grade 6</li>
         <li>4th Place in the 2017 District Science Fair in Science Trivia Contest</li>
         <li>4th Place in Sports Writing (Filipino) Eddis Level Press Conference – Grade 6</li>
         <li>3rd Place in Sports Writing (Filipino) District Level Press Conference – Grade 6</li>
         <li>5th Place in 2017 Metrobank MTAP DepEd Challenge – Grade 6</li>
-        <li>With Honor – Grade 5 (2016-2017)</li>
         <li>3rd Place in Sports Writing (Filipino) District Level Press Conference – Grade 5</li>
         <li>5th Place in 2017 Metrobank MTAP DepEd Challenge – Grade 5</li>
         <li>3rd Place in Metrobank MTAP DepEd Challenge – Grade 4</li>
-        <li>With Honor – Grade 3 (2014-2015)</li>
-        <li>With Honor – Grade 2 (2013-2014)</li>
-        <li>With Honor – Grade 1 (2012-2013)</li>
+        <li>With Honor – Grade 1 - 3 (2012-2015)</li>
       </ul>
     </div>
     <hr>
@@ -84,7 +77,6 @@
         <li>Critical Thinking</li>
         <li>Leadership</li>
         <li>Communication</li>
-        <li>Collaboration</li>
         <li>Willingness to learn, grow, and be trained</li>
       </ul>
     </div>
@@ -93,7 +85,7 @@
     <h2>Character Reference</h2>
     <ul>
         <li class="text">
-            <b>Ms. Celly Tomonong</b> <br>
+            <b>Sir Celedonio Tomonong</b> <br>
             Pagsulat sa Filipino sa Piling Larangan teacher<br>
             First City Providential College<br>
             +639123456789
@@ -112,7 +104,7 @@
         <br>
         <p style="text-align: right;">
             Shawn David S. Domingo <br>
-            STUDENT
+            Applicant
         </p>
     </div>
   </div>
