--- a/Files/Pananaliksik.html
+++ b/Files/Pananaliksik.html
@@ -2112,8 +2112,9 @@
                 <p class="apa">
                     Cabaces, D. (2018). Engineering Education In The Philippines. Retrieved from 
                     <a href="https://www.researchgate.net/publication/332670863_Engineering_Education_In_The_Philippines" target="_blank">
-                        https://www.researchgate.net/publication/332670863_Engineering_Education_In_The_Philippines
-                    </a>
+                        https://www.researchgate.net/ </a><br>
+                        publication/332670863_Engineering_Education_In_The_Philippines
+                    
                 </p>
                 <br>
                 <p class="apa">
@@ -2146,48 +2147,47 @@
                 <p class="apa">
                     Mashhood, M. (2019). Exploring Challenges in Teaching Adolescents to Become Lifelong Learners. Retrieved from 
                     <a href="https://www.academia.edu/42768417/Exploring_Challenges_in_Teaching_Adolescents_to_Become_Lifelong_Learners" target="_blank">
-                        https://www.academia.edu/42768417/Exploring_Challenges_in_Teaching_Adolescents_to_Become_Lifelong_Learners
-                    </a>
+                        https://www.academia.edu/ </a>
                 </p>
                 <br>
                 <p class="apa">
                     Mteneri, J. (2017). Factors influencing the choice of career pathways among high school students in Midlands Province, Zimbabwe. Retrieved from 
                     <a href="http://hdl.handle.net/10500/23174" target="_blank">
-                        http://hdl.handle.net/10500/23174
+                        http://hdl.handle.net/
                     </a>
                 </p>
                 <br>
                 <p class="apa">
                     Retes, R. C., Calunsag, A. M. T., &amp; Baso, G. S. (2023). Career Choices for a Senior High School Strand. <i>International Journal of Research in Engineering, Science and Management</i>, 6(3), 69–72. Retrieved from 
                     <a href="https://journal.ijresm.com/index.php/ijresm/article/view/2584" target="_blank">
-                        https://journal.ijresm.com/index.php/ijresm/article/view/2584
+                        https://journal.ijresm.com
                     </a>
                 </p>
                 <br>
                 <p class="apa">
                     Robles, J. (2015). Understanding the College Decision Making Process of the Communication Research Freshman Students of Polytechnic University of the Philippines College of Communication. Retrieved from 
                     <a href="https://www.academia.edu/28085365/Understanding_the_College_Decision_Making_Process_of_the_Communication_Research_Freshman_Students_of_Polytecnic_University_of_the_Philippines_College_of_Communication" target="_blank">
-                        https://www.academia.edu/28085365/Understanding_the_College_Decision_Making_Process_of_the_Communication_Research_Freshman_Students_of_Polytecnic_University_of_the_Philippines_College_of_Communication
+                        https://www.academia.edu
                     </a>
                 </p>
                 <br>
                 <p class="apa">
                     Spott, J. (n.d.). Expectancy-Value Theory. Retrieved from 
                     <a href="https://ascnhighered.org/ASCN/change_theories/collection/evt.html" target="_blank">
-                        https://ascnhighered.org/ASCN/change_theories/collection/evt.html
+                        https://ascnhighered.org
                     </a>
                 </p>
                 <br>
                 <p class="apa">Sudhakar, R. (2021). Intercontinental Lifelong Learning Skills. <i>Aarhat Multidisciplinary International Education Research Journal</i>, <i>10</i>(2). Retrieved from 
                     <a href="https://www.academia.edu/91594130/Intercontinental_Lifelong_Learning_Skills" target="_blank">
-                        https://www.academia.edu/91594130/Intercontinental_Lifelong_Learning_Skills
+                        https://www.academia.edu
                     </a>
                 </p>
                 <br>
                 <p class="apa">
                     Zeb, A. (2016). Factors Affecting the Career Choices of Secondary School Students in Khyber Pakhtunkhwa, Pakistan. Retrieved from 
                     <a href="https://www.academia.edu/99131069/Factors_Affecting_the_Career_Choices_of_Secondary_School_Students_in_Khyber_Pakhtunkhwa_Pakistan" target="_blank">
-                        https://www.academia.edu/99131069/Factors_Affecting_the_Career_Choices_of_Secondary_School_Students_in_Khyber_Pakhtunkhwa_Pakistan
+                        https://www.academia.edu
                     </a>
                 </p>
             </bibliyograpiya>
