--- a/Files/shawn-html.html
+++ b/Files/shawn-html.html
@@ -20,6 +20,14 @@
         header {
             text-align: center;
             margin-bottom: 20px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.7);
+            position: relative;
+            z-index: 1;
+            text-align: center;
+            border-radius: 100px 100px 5px 5px;
+            width: 50%;
         }
         h1 {
             margin-top: 10;
@@ -31,6 +39,7 @@
             position: relative;
             z-index: 1;
             text-align: center;
+            border-radius: 100px;
         }
         .overlay {
             position: absolute;
