--- a/Files/College.html
+++ b/Files/College.html
@@ -143,7 +143,7 @@
                 > QC pero pwede naman uwian<br>
                 > dorm/apartment depends pa naman <br>
                 > idk if may Wi-Fi sa titirahan if mag-rent <br>
-                > will look for circle of friends na naman <br>
+                > will look for new circle of friends na naman :') <br>
                 > not yet autonomous <br>
                 > idk the curriculum <br>
             </p>
