--- a/Files/College.html
+++ b/Files/College.html
@@ -106,10 +106,10 @@
         <section>
             <h3>Pros:</h3>
             <p>
-                > malapit <br>
+                > malapit lang means less gastos na rin <br>
                 > no need for dorm <br>
                 > autonomous college when I graduate <br>
-                > may masayang circle of friends na <br>
+                > may circle of friends na <br>
                 > air-conditioned <br>
                 > almost same sa NEU (idk if partner sila) <br>
                 > BSIT kasi may ka-duo na ako, waiting sana maging kaklase rin si Charles para kumpleto kami haha <br>
@@ -119,7 +119,7 @@
         <section>
             <h3>Cons:</h3>  
             <p>
-                > not a university but soon it will be<br>
+                > not a university (but soon will it be?) <br>
                 > might not known by some companies when applying for a job <br>
                 > dito mag-e-enroll yung ilan kong pabigat na kaklase noon <br>
             </p>
@@ -134,15 +134,15 @@
                 > may ilang kakilala na <br>
                 > air-conditioned siguro<br>
                 > might be known by some companies (I'm not sure) <br>
-                > BSCS ang priority ko rito kesa BSIT <br>
+                > BSComSci ang priority ko rito kesa BSIT <br>
             </p>
         </section>
         <section>
             <h3>Cons:</h3>  
             <p>
-                > QC pero pwede naman uwian<br>
-                > dorm/apartment depends pa naman <br>
-                > idk if may Wi-Fi sa titirahan if mag-rent <br>
+                > QC pero pwede naman uwian <br>
+                > dorm/apartment which means dagdag gastos depends pa naman <br>
+                > idk if may Wi-Fi sa titirahan if mag-rent haha <br>
                 > will look for new circle of friends na naman :') <br>
                 > not yet autonomous <br>
                 > idk the curriculum <br>
@@ -150,7 +150,6 @@
         </section>
         <br>
     </main>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1I4AimunrPco2EPBNEWw7Y?utm_source=generator&theme=0" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	<br><br>
     <hr>
 	<nav>
