--- a/Files/College.html
+++ b/Files/College.html
@@ -125,7 +125,7 @@
             </p>
         </section>
         <br>
-		<h2>New Era university</h2>
+		<h2>New Era University</h2>
 		<section>
             <h3>Pros:</h3>
             <p>
