--- a/Files/College.html
+++ b/Files/College.html
@@ -5,17 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shawn David</title>
     <link rel="icon" href="pics/boywithuke1.jpg"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Cambria;
+            font-family: "Alegreya", serif;
             margin: 0;
             padding: 0;
-            background-image: url(pics/boywithuke.jpg);
-            background-size: cover; 
-            background-position: center;
-			background-attachment: fixed;
-            color: #fff;
-            position: relative;
+            background-color: #f9f9f9;
         }
         header {
             text-align: center;
@@ -34,7 +32,7 @@
         main {
             margin: 0 auto;
             padding: 20px;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.3);
             position: relative;
             z-index: 1;
             text-align: center;
@@ -106,12 +104,11 @@
         <section>
             <h3>Pros:</h3>
             <p>
-                > malapit lang means less gastos na rin <br>
+                > malapit lang means less gastos <br>
                 > no need for dorm <br>
                 > autonomous college when I graduate <br>
                 > may circle of friends na <br>
                 > air-conditioned <br>
-                > almost same sa NEU (idk if partner sila) <br>
                 > BSIT kasi may ka-duo na ako, waiting sana maging kaklase rin si Charles para kumpleto kami haha <br>
                 > I know some of its educational management <br>
             </p>
@@ -119,7 +116,7 @@
         <section>
             <h3>Cons:</h3>  
             <p>
-                > not a university (but soon will it be?) <br>
+                > not a university <br>
                 > might not known by some companies when applying for a job <br>
                 > dito mag-e-enroll yung ilan kong pabigat na kaklase noon <br>
             </p>
@@ -130,9 +127,11 @@
             <h3>Pros:</h3>
             <p>
                 > Dream university <br>
-                > university <br>
+                > pang-Top 70 na university sa Pilipinas  
+                <a href="https://edurank.org/uni/new-era-university/" target="_blank">
+                    (Edurank) </a><br>
                 > may ilang kakilala na <br>
-                > air-conditioned siguro<br>
+                > nag-r-ready na maging autonomous <br>
                 > might be known by some companies (I'm not sure) <br>
                 > BSComSci ang priority ko rito kesa BSIT <br>
             </p>
@@ -142,9 +141,7 @@
             <p>
                 > QC pero pwede naman uwian <br>
                 > dorm/apartment which means dagdag gastos depends pa naman <br>
-                > idk if may Wi-Fi sa titirahan if mag-rent haha <br>
                 > will look for new circle of friends na naman :') <br>
-                > not yet autonomous <br>
                 > idk the curriculum <br>
             </p>
         </section>
